--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b826c2; }
+  background: #ca27e3; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #9cb8d6; }
+  background: #f40d2f; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ead7d3; }
+  background: #31f1e9; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #a41280; }
+  background: #bbb1a2; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #b2f2d2; }
+  background: #f58c9f; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #cd863c; }
+  background: #121cda; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #11cdf2; }
+  background: #6372d4; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #6e2707; }
+  background: #96ea9a; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #528728; }
+  background: #ee6235; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #747650; }
+  background: #a67c21; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #b45b90; }
+  background: #859dd3; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #ef617f; }
+  background: #316216; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #373033; }
+  background: #2f7145; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #f44311; }
+  background: #7fb951; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #b7b52d; }
+  background: #3f9026; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9998d7; }
+  background: #0b0fd6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #7fb273; }
+  background: #b61656; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2ac635; }
+  background: #586882; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #74b4d2; }
+  background: #f79766; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9fd6a5; }
+  background: #b29e35; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ab7543; }
+  background: #bf9187; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #11a385; }
+  background: #415932; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #eed2a0; }
+  background: #4fc683; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #32743c; }
+  background: #110b32; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #a3177c; }
+  background: #f20e4b; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #8f7da2; }
+  background: #de30dc; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #108bfc; }
+  background: #3acfec; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #6fbb93; }
+  background: #3c2a88; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #6ccc55; }
+  background: #53e3dc; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #c2c2fd; }
+  background: #db9691; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #1e8f81; }
+  background: #4970e0; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #028a90; }
+  background: #365137; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #839a46; }
+  background: #bb4ebe; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #5b8c23; }
+  background: #b6a7d5; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #237b21; }
+  background: #069a16; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #fa4f05; }
+  background: #048375; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #70b431; }
+  background: #db86ac; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #78e32c; }
+  background: #95edce; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #1dafe6; }
+  background: #e63926; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #bd3f63; }
+  background: #14aaa8; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #50af74; }
+  background: #eec0df; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f4e939; }
+  background: #5ee258; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8d892b; }
+  background: #1f1e50; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #b0ab5a; }
+  background: #f8104f; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #e6b63c; }
+  background: #d965a5; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #eb8235; }
+  background: #b883a0; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #7a9f9f; }
+  background: #017c50; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #386089; }
+  background: #ae32bf; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #270505; }
+  background: #0f344f; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #eb5564; }
+  background: #95453b; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #242d53; }
+  background: #2b2d6b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #83b79a; }
+  background: #5f199f; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #83c09d; }
+  background: #75fb33; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #6c6745; }
+  background: #0f8f86; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #2e7838; }
+  background: #6ead55; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #4f69b8; }
+  background: #2fe7c1; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #b1c280; }
+  background: #a1b9e4; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #f192d4; }
+  background: #27abfd; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #99773b; }
+  background: #7f9b0d; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #6c82d9; }
+  background: #6b587b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #e5ad31; }
+  background: #56ce50; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #589704; }
+  background: #722a1b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #c6350d; }
+  background: #92b338; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #32c51e; }
+  background: #119533; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #5d1fca; }
+  background: #4f390a; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #08f0dd; }
+  background: #d6b303; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #293cdc; }
+  background: #3f2b4c; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #182c64; }
+  background: #a35c60; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #6746ca; }
+  background: #510ee9; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #311ab3; }
+  background: #51f29f; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #22eece; }
+  background: #f85757; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ad993a; }
+  background: #9ef794; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #7f86f8; }
+  background: #9849a9; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e8db05; }
+  background: #4f8eb8; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #241b98; }
+  background: #fd9d03; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #dd60af; }
+  background: #7e55d9; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #a4c394; }
+  background: #4c41fb; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #4c4b3e; }
+  background: #ea1933; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #8bc927; }
+  background: #15bdd3; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #48e0f1; }
+  background: #13d192; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #bd67bb; }
+  background: #a1f326; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #7e9ae1; }
+  background: #8dd64d; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #dca9e1; }
+  background: #367758; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #f4bddf; }
+  background: #ecd45c; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #661f0d; }
+  background: #f2dfe0; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #225e9b; }
+  background: #f56b9c; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #64e7d9; }
+  background: #e24bb4; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #c5ccd4; }
+  background: #0ab6f6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #42dca0; }
+  background: #d1c247; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e607ab; }
+  background: #04ff5e; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #5013c8; }
+  background: #d8b2a2; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #570709; }
+  background: #cb2e49; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a64b0b; }
+  background: #e1313a; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #b396e1; }
+  background: #3a45b2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #74b792; }
+  background: #36e03f; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #37ff2b; }
+  background: #519e7b; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #42a9ae; }
+  background: #81d8d1; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #4c510e; }
+  background: #ab1ebf; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #e1e052; }
+  background: #138fee; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #ce40ec; }
+  background: #aecce4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
