--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ca27e3; }
+  background: #1d0185; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f40d2f; }
+  background: #0c3e68; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #31f1e9; }
+  background: #982e1f; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #bbb1a2; }
+  background: #3a0fb1; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #f58c9f; }
+  background: #bdeac7; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #121cda; }
+  background: #11a63e; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6372d4; }
+  background: #8a54ed; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #96ea9a; }
+  background: #a0e62d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #ee6235; }
+  background: #3aaedc; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #a67c21; }
+  background: #91a9cd; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #859dd3; }
+  background: #0928de; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #316216; }
+  background: #7d34b1; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #2f7145; }
+  background: #0a97df; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7fb951; }
+  background: #cd93bb; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3f9026; }
+  background: #06c37a; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #0b0fd6; }
+  background: #acbf90; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #b61656; }
+  background: #9d942a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #586882; }
+  background: #7cee92; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #f79766; }
+  background: #43324b; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #b29e35; }
+  background: #de9347; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #bf9187; }
+  background: #5e5a98; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #415932; }
+  background: #69750d; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #4fc683; }
+  background: #0265fd; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #110b32; }
+  background: #b18a66; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f20e4b; }
+  background: #d56e09; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #de30dc; }
+  background: #47d3ae; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #3acfec; }
+  background: #5a1b42; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #3c2a88; }
+  background: #7dfd6f; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #53e3dc; }
+  background: #084dc7; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #db9691; }
+  background: #09b3e6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #4970e0; }
+  background: #cdc51f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #365137; }
+  background: #96224f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #bb4ebe; }
+  background: #85ffe2; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #b6a7d5; }
+  background: #18d7ca; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #069a16; }
+  background: #adacfb; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #048375; }
+  background: #83d74c; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #db86ac; }
+  background: #ad30ce; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #95edce; }
+  background: #925fa6; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #e63926; }
+  background: #bbe066; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #14aaa8; }
+  background: #938e59; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #eec0df; }
+  background: #94191a; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #5ee258; }
+  background: #c41646; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #1f1e50; }
+  background: #080bec; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #f8104f; }
+  background: #c18417; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #d965a5; }
+  background: #dba935; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #b883a0; }
+  background: #887602; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #017c50; }
+  background: #cccc96; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #ae32bf; }
+  background: #d0b5fc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #0f344f; }
+  background: #f1536d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #95453b; }
+  background: #921d84; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #2b2d6b; }
+  background: #ab0cef; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #5f199f; }
+  background: #2f8644; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #75fb33; }
+  background: #e01ab7; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #0f8f86; }
+  background: #ae75c1; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #6ead55; }
+  background: #4ef290; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #2fe7c1; }
+  background: #80acc4; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #a1b9e4; }
+  background: #2ab5ca; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #27abfd; }
+  background: #c3c988; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7f9b0d; }
+  background: #28fca2; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #6b587b; }
+  background: #de1ee6; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #56ce50; }
+  background: #239782; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #722a1b; }
+  background: #ca510b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #92b338; }
+  background: #01cf44; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #119533; }
+  background: #e4ce6b; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4f390a; }
+  background: #c83e47; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #d6b303; }
+  background: #bf8f98; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3f2b4c; }
+  background: #a2bebd; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #a35c60; }
+  background: #bb4356; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #510ee9; }
+  background: #f4dcbb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #51f29f; }
+  background: #263b5e; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f85757; }
+  background: #5055f7; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #9ef794; }
+  background: #ad1206; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9849a9; }
+  background: #2fe3c6; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #4f8eb8; }
+  background: #62220d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #fd9d03; }
+  background: #84801a; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #7e55d9; }
+  background: #0b847a; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #4c41fb; }
+  background: #b168c3; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #ea1933; }
+  background: #1146f5; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #15bdd3; }
+  background: #25563d; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #13d192; }
+  background: #270781; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a1f326; }
+  background: #014c41; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #8dd64d; }
+  background: #7da13c; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #367758; }
+  background: #5d9825; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #ecd45c; }
+  background: #4d706b; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #f2dfe0; }
+  background: #894b96; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #f56b9c; }
+  background: #0c444f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #e24bb4; }
+  background: #d0624c; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #0ab6f6; }
+  background: #b8ca7c; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #d1c247; }
+  background: #ed342e; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #04ff5e; }
+  background: #b9dbe7; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #d8b2a2; }
+  background: #b62125; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #cb2e49; }
+  background: #59e8c3; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #e1313a; }
+  background: #a7ff49; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #3a45b2; }
+  background: #a1f7b6; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #36e03f; }
+  background: #fc0ee2; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #519e7b; }
+  background: #961ac1; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #81d8d1; }
+  background: #43060a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #ab1ebf; }
+  background: #3c0128; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #138fee; }
+  background: #4b306d; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #aecce4; }
+  background: #72841d; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -10930,7 +10930,7 @@ input[type="checkbox"] {
   align-items: center;
   position: relative;
   width: 100%;
-  height: auto;
+  height: 100vh;
   padding: 90px; }
 
 .intro-inner-div {
@@ -10941,7 +10941,7 @@ input[type="checkbox"] {
   display: -webkit-flex;
   display: -moz-box;
   display: -ms-flexbox;
-  /*! display:flex; */
+  display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.19);
@@ -11086,7 +11086,7 @@ li.prev {
 
 .LoginPanel .fieldsSection .userName {
   background: #fff url(../images/icon-user.png) no-repeat 12px center;
-  margin-bottom: 55px; }
+  margin-bottom: 30px; }
 
 .LoginPanel .fieldsSection .password {
   margin-bottom: 10px; }
@@ -11114,7 +11114,7 @@ li.prev {
 
 .LoginPanel .fieldsBotSection label {
   color: #4c4c4c;
-  padding: 25px 0px;
+  padding: 0px 0px;
   font-size: 15px;
   transition: all 0.3s ease-in-out 0s;
   line-height: 1.1em;
@@ -11149,7 +11149,7 @@ li.prev {
   padding: 8px 8px 20px; }
 
 .LoginPanel .fieldsBotSection .forgotLink {
-  color: #8e8e8e;
+  color: #776fff;
   font-size: 15px;
   transition: all 0.3s ease-in-out 0s;
   line-height: 1em;
@@ -11185,6 +11185,9 @@ input[type="submit"] {
   background: #8651ff;
   border: none;
   border-radius: 5px; }
+  .Btn:hover,
+  input[type="submit"]:hover {
+    background: #5827c8; }
 
 .try-free-btn {
   font-size: 17px;
@@ -11505,11 +11508,15 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
+.modal-add-connections-wrapper
+.adding-adapter-modal-header
+.adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -11675,7 +11682,7 @@ input:checked + .sliders:before {
       height: 52px;
       position: absolute;
       border: 1px solid #776fff;
-      top: -57px;
+      top: -56px;
       left: 38px; }
     .query-wizard-exp-contents .query-wizard-expension .query-wizard-exp-btn a {
       color: #000000;
@@ -12691,6 +12698,32 @@ td .check-container {
     justify-content: space-between; }
   .Notification-model-wrapper .time-date-notify {
     font-size: 12px; }
+
+.select-tag {
+  height: 33px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url(../images/select-dropdwon-icon.png);
+  background-repeat: no-repeat;
+  background-position-x: 96%;
+  background-position-y: 13px;
+  padding: 5px;
+  border-radius: 0px;
+  border: 1px solid #d4d4d4; }
+
+.dashboard-search-select select {
+  border: none;
+  padding: 12px 20px 15px 15px;
+  height: 40px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-image: url(assets/images/select-dropdwon-icon.png);
+  background-repeat: no-repeat;
+  background-position-x: 90%;
+  background-position-y: 18px;
+  box-sizing: border-box; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
